# DICOM_Viewer_proyect

./: README.md  pyproject.toml  requirements.txt
Proyecto DICOM/: LICENSE  README.md
Proyecto DICOM/data/sample_dicom/: ct_sample.dcm
Proyecto DICOM/data/sample_dicom/series/: slice_0000.dcm  slice_0001.dcm  slice_0003.dcm  slice_0004.dcm  slice_0005.dcm  slice_0006.dcm  slice_0007.dcm  slice_0011.dcm  slice_0016.dcm  slice_0017.dcm  slice_0018.dcm
Proyecto DICOM/dicom_tools/: __init__.py  reader.py  viewer.py  volume.py
Proyecto DICOM/dicom_tools.egg-info/: PKG-INFO  requires.txt
Proyecto DICOM/examples/: quick_start.py
Proyecto DICOM/scripts/: dicom_viewer.py  explore_dicom.py  generate_sample_dicom.py  view_dicom.py
Proyecto DICOM/tests/: test_info.py  test_pixels.py  test_reader.py  test_volume.py
data/sample_dicom/series/: slice_0002.dcm  slice_0008.dcm  slice_0009.dcm  slice_0010.dcm  slice_0012.dcm  slice_0013.dcm  slice_0014.dcm  slice_0015.dcm  slice_0019.dcm
dicom_tools/: anonymizer.py  batch.py  info.py  pixels.py
dicom_tools.egg-info/: SOURCES.txt
scripts/: generate_sample_series.py  show_info.py  view_planes.py
tests/: conftest.py  test_anonymizer.py  test_batch.py  test_viewer.py
