[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dicom-tools"
version = "0.1.0"
description = "Kit sencillo para leer, inspeccionar, anonimizar y visualizar imagenes DICOM"
requires-python = ">=3.10"
dependencies = [
    "pydicom>=3.0",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "pillow>=11.0",
    "pandas>=2.2",
]

[tool.setuptools.packages.find]
include = ["dicom_tools*"]
